# smo

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile.am  README  autogen.sh  configure.ac  index.html  params.json  smo.py
examples/inter-array/: blur-interleaved.smo.input  blur-tiled.smo.input  heat1d-double-buffer.smo.input  heat2d-double-buffer.smo.input  heat3d-double-buffer.smo.input  jacobi2d-smoothing.smo.input  unsharp-tiled.smo.input
examples/intra-array/: blur-interleaved.smo.input  blur-tiled.smo.input  blur-unsharp-tiled.smo.input  diamond.smo.input  fib.smo.input  heat-2d-tiled.smo.input  hex.smo.input  lbmd2q9.smo.input  lbmd3q19.smo.input  parallelogram.smo.input  tile.smo.input
examples/intra-array/blur-interleaved/: blur-interleaved.c
examples/intra-array/blur-tiled/: blur-tiled.c
examples/intra-array/heat1d-tiled/: heat-1d-tiled.c
examples/intra-array/unsharp-tiled/: unsharp.c
src/: ConflictSpec.cpp  ConflictSpec.h  ConflictSpecBuilder.cpp  ConflictSpecBuilder.h  ISLUtils.cpp  ISLUtils.h  IterativeStoragePartition.cpp  IterativeStoragePartition.h  Makefile.am  Namer.cpp  Namer.h  SMO.h  StoragePartition.cpp  StoragePartition.h  main.cpp  version.h
src/.deps/: libsmo_la-test.Plo  smo-test.Po
